--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
 		"bcryptjs": "^2.4.3",
 		"cloudinary": "^2.4.0",
 		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"ioredis": "^5.4.1",
 		"jsonwebtoken": "^9.0.2",
+		"moment": "^2.30.1",
 		"mongoose": "^8.5.3",
+		"react-helmet-async": "^2.0.5",
 		"stripe": "^16.12.0"
 	},
 	"devDependencies": {
