--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
 		"@emailjs/browser": "^4.4.1",
 		"@stripe/stripe-js": "^4.3.0",
 		"axios": "^1.7.5",
+		"body-parser": "^2.2.1",
 		"framer-motion": "^11.3.30",
 		"lucide-react": "^0.435.0",
+		"ngrok": "^5.0.0-beta.2",
 		"react": "^18.3.1",
 		"react-confetti": "^6.1.0",
 		"react-dom": "^18.3.1",
