--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"moment": "^2.30.1",
 		"mongoose": "^8.5.3",
 		"react-helmet-async": "^2.0.5",
+		"react-toastify": "^11.0.5",
 		"stripe": "^16.12.0"
 	},
 	"devDependencies": {
