--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"moment": "^2.30.1",
 		"mongoose": "^8.5.3",
+		"multer": "^2.0.2",
+		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
 		"react-toastify": "^11.0.5",
 		"stripe": "^16.12.0"
