--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"multer": "^2.0.2",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
-		"react-toastify": "^11.0.5",
+		"react-hot-toast": "^2.6.0",
 		"stripe": "^16.12.0"
 	},
 	"devDependencies": {
