--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
 	"type": "module",
 	"license": "ISC",
 	"dependencies": {
+		"africastalking": "^0.7.8",
 		"axios": "^1.13.2",
 		"bcryptjs": "^2.4.3",
-		"cloudinary": "^2.4.0",
+		"bull": "^4.16.5",
+		"cloudinary": "^2.8.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
-		"ioredis": "^5.4.1",
+		"ioredis": "^5.8.2",
 		"jsonwebtoken": "^9.0.2",
 		"moment": "^2.30.1",
 		"mongoose": "^8.5.3",
 		"multer": "^2.0.2",
+		"nodemailer": "^7.0.12",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
 		"react-hot-toast": "^2.6.0",
