--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,7 @@
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.26.1",
 		"recharts": "^2.12.7",
-		"zustand": "^4.5.5",
-		"vite": "^5.4.21"
+		"zustand": "^4.5.5"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
